global: fix spacing

--- a/controls.css
+++ b/controls.css
@@ -66,7 +66,7 @@ input:where([type="button"], [type="submit"]) {
 
 	padding: 5px;
 
-	min-width: 74px;
+	min-width: 75px;
 	height: unset;
 
 	&:active {
@@ -149,7 +149,7 @@ input {
 
 	&[type="number"] {
 		padding: 0;
-		padding-left: 3px;
+		padding-left: 4px;
 
 		&::-webkit-inner-spin-button {
 			appearance: none;
